[tool.poetry]
name = "llm-agents"
version = "0.0.1"
description = ""
authors = ["Sharabh Shukla <sharabh2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
langchain-community = "^0.0.19"
duckduckgo-search = "^5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
